visual bug
bigcontainer wasn't covering all the way to the bottom on mobile screen

--- a/public/css/views/questions.css
+++ b/public/css/views/questions.css
@@ -4,6 +4,10 @@
 	--wrong-text-color: #e65e5e;
 }
 
+body {
+	background-color: var(--primary-color);
+}
+
 mark.highlighter {
 	background-color: #ffe48c;
 }
